Fix/plf-7521 [Regression][Default-Skin] Space description is not ellipsis with three points when its too long

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/social.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/social.less
@@ -87,6 +87,9 @@
                     word-wrap: break-word;
                     overflow-wrap: break-word;
 				}
+				p {
+					font-size: 12px;
+				}
 			}
 			.connectionBtn {
 				line-height: 28px;
